<resources>
    <string name="app_name">Health Advisor</string>
    <string name="nav_draw_open">Open Navigation</string>
    <string name="nav_draw_close">Close Navigation</string>
    <string name="tika1">wbqwgZ wUKv`vb mgqm~wP</string>
    <string name="tikaB1">0-11 gvm Ges 15 gvm eq‡mi wkky‡`i wUKv`vb mgqm~wP</string>
    <string name="tikaB2">15 eQi eqmx wK‡kvix I 15-49 eQi eq‡mi gwnjv‡`i wUKv`vb mgqm~wP</string>

    <string name="tikas1">h²v</string>
    <string name="tikas2">wWd‡_wiqv, ûwcsKvwk\nabyósKvi, †ncvUvBwUm-we,\nwn‡gvdvBjvm Bbd¬y‡qÄv-we</string>
    <string name="tikas3">wbD‡gvK°vj wbD‡gvwbqv</string>
    <string name="tikas4">†cvwjI gvBjvBUm</string>
    <string name="tikas5">nvg I iæ‡ejv</string>
    <string name="tikas6">nvg</string>

    <string name="tikaw1">nvg I iæ‡ejv</string>
    <string name="tikaw2">abyósKvi</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="st1">New Born Baby</string>
    <string name="st2">Children</string>
    <string name="st3">Tika</string>
    <string name="st4">Emergency Helpline</string>
    <string name="st5">Nearby Hospital</string>
    <string name="st6">Required Nutrition</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About Us</string>
    <string name="meet_us_at">Meet us at</string>
    <string name="share_with_friend">Share with friend</string>


</resources>
