<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_id">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/item1_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/st1"
                android:icon="@drawable/ic1" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/item2_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic2"
                android:text="@string/st2"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/item3_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic3"
                android:text="@string/st3"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/item4_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic4"
                android:text="@string/st4"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/item5_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic5"
                android:text="@string/st5" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/item6_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic6"
                android:text="@string/st6"/>


        </com.google.android.material.tabs.TabLayout>
    </HorizontalScrollView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_id"
        android:layout_width="406dp"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>